# gst-plugin-rs

./: Cargo.toml
gst-plugin/: Cargo.toml
gst-plugin-http/: Cargo.toml
gst-plugin-http/src/: httpsrc.rs  lib.rs
gst-plugin-rust-av/: Cargo.toml
gst-plugin-rust-av/src/: avdecoder.rs
gst-plugin/src/: lib.rs  video_filter.rs
