[package]
name = "gst-plugin-http"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/gst-plugin-rs"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
gst-plugin = { path="../gst-plugin" }
futures = "0.1"
tokio-core = "0.1"
reqwest = { version = "0.8", features = ["unstable"] }
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
lazy_static = "0.2"
either = "1.0"

[lib]
name = "gstrshttp"
crate-type = ["cdylib"]
path = "src/lib.rs"
